--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,61 @@
 @import-normalize; /* bring in normalize.css styles */
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* poppins-500 - latin */
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  src: url('./fonts/poppins-v20-latin-500.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('./fonts/poppins-v20-latin-500.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./fonts/poppins-v20-latin-500.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./fonts/poppins-v20-latin-500.woff') format('woff'),
+    /* Modern Browsers */
+    url('./fonts/poppins-v20-latin-500.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./fonts/poppins-v20-latin-500.svg#Poppins') format('svg');
+  /* Legacy iOS */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* rubik-regular - latin */
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./fonts/rubik-v23-latin-regular.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('./fonts/rubik-v23-latin-regular.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./fonts/rubik-v23-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./fonts/rubik-v23-latin-regular.woff') format('woff'),
+    /* Modern Browsers */
+    url('./fonts/rubik-v23-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./fonts/rubik-v23-latin-regular.svg#Rubik') format('svg');
+  /* Legacy iOS */
+}
+
+/* rubik-500 - latin */
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 500;
+  src: url('./fonts/rubik-v23-latin-500.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('./fonts/rubik-v23-latin-500.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./fonts/rubik-v23-latin-500.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./fonts/rubik-v23-latin-500.woff') format('woff'),
+    /* Modern Browsers */
+    url('./fonts/rubik-v23-latin-500.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./fonts/rubik-v23-latin-500.svg#Rubik') format('svg');
+  /* Legacy iOS */
 }
